@@ -8,6 +8,8 @@ Summary of important user-visible changes for statistics 1.2.1:
  ** dendogram now returns the leaf node numbers and order that the nodes were
     displayed in.
 
+ ** New faster implementation of princomp.
+
 Summary of important user-visible changes for statistics 1.2.0:
 -------------------------------------------------------------------
 
